Update dependencies, enhance map functionality, and improve travel planning features. Added support for Google Maps API, removed unused Apple MapKit dependencies, and updated README and setup instructions for new API keys. Enhanced logging for debugging in AI context and chat components.

--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "@ai-sdk/react": "^2.0.60",
     "@ai-sdk/rsc": "^1.0.60",
     "@bacons/apple-colors": "^0.0.8",
-    "@expo/vector-icons": "^14.0.2",  
+    "@expo/vector-icons": "^14.0.2",
     "@react-native-masked-view/masked-view": "0.3.2",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.14",
+    "@vis.gl/react-google-maps": "^1.5.5",
     "ai": "^3.4.33",
     "expo": "~52.0.47",
     "expo-blur": "~14.0.1",
@@ -39,7 +40,6 @@
     "expo-symbols": "~0.2.2",
     "expo-system-ui": "~4.0.9",
     "expo-web-browser": "~14.0.1",
-    "mapkit-react": "^1.15.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.9",
@@ -56,7 +56,6 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@types/apple-mapkit-js-browser": "^5.65.3",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
